--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "team23zip_fullstack",
   "version": "0.0.0",
   "scripts": {
-    "heroku-prebuild": "cd angular_src && npm install && npm install -g @angular/cli@latest  && npm run ng build",
+    "heroku-prebuild": "cd angular_src && npm update && npm install && npm install -g @angular/cli@latest  && npm run ng update && npm update && npm i --only=dev && npm run ng build",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
